; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_loop-iv.c_iv_analysis_done.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_loop-iv.c_iv_analysis_done.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@df = common dso_local global i32* null, align 8
@bivs = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iv_analysis_done() #0 {
  %1 = load i32*, i32** @df, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %9

3:                                                ; preds = %0
  %4 = call i32 (...) @clear_iv_info()
  %5 = load i32*, i32** @df, align 8
  %6 = call i32 @df_finish(i32* %5)
  store i32* null, i32** @df, align 8
  %7 = load i32*, i32** @bivs, align 8
  %8 = call i32 @htab_delete(i32* %7)
  store i32* null, i32** @bivs, align 8
  br label %9

9:                                                ; preds = %3, %0
  ret void
}

declare dso_local i32 @clear_iv_info(...) #1

declare dso_local i32 @df_finish(i32*) #1

declare dso_local i32 @htab_delete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
